--- a/www/index.html
+++ b/www/index.html
@@ -1,14 +1,20 @@
 <head>
   <title>JavaScript Commander</title>
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
-  <link rel="import" href="example/proto-element.html">
-  <link rel="import" href="example/dom-element.html">
-  <link rel="import" href="example/picture-frame.html">
+  <link rel="import" href="example/configurable-name-tag.html">
+  <link rel="import" href="modules/arcade-button.html">
+  <link rel="import" href="bower_components/paper-button/paper-button.html">
+  <style>
+    html { font-family: sans-serif; }
+    paper-button { float:left; }
+  </style>
 </head>
 <body>
-  <proto-element></proto-element>
-  <dom-element></dom-element>
-  <picture-frame>
-    <img src="images/logo.svg">
-  </picture-frame>
+  <name-tag></name-tag>
+  <br>
+  <arcade-button>Hello</arcade-button>
+  <arcade-button>Goodbye</arcade-button>
+  <paper-button raised>raised button</paper-button>
+  <configurable-name-tag owner="Matt Pierzynski" color="0xFF99BB"></configurable-name-tag>
+
 </body>
