--- a/www/index.html
+++ b/www/index.html
@@ -2,19 +2,20 @@
   <title>JavaScript Commander</title>
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="example/configurable-name-tag.html">
+  <link rel="import" href="example/editable-name-tag.html">
   <link rel="import" href="modules/arcade-button.html">
+  <link rel="import" href="modules/action-toolbar.html">
   <link rel="import" href="bower_components/paper-button/paper-button.html">
   <style>
     html { font-family: sans-serif; }
-    paper-button { float:left; }
   </style>
 </head>
 <body>
   <name-tag></name-tag>
   <br>
-  <arcade-button>Hello</arcade-button>
-  <arcade-button>Goodbye</arcade-button>
-  <paper-button raised>raised button</paper-button>
+  <action-toolbar></action-toolbar>
+  <paper-button keyboardEventMatchesKeys="a">Goodbye</paper-button>
+  <editable-name-tag owner="Jeff"></editable-name-tag>
   <configurable-name-tag owner="Matt Pierzynski" color="0xFF99BB"></configurable-name-tag>
 
 </body>
