--- a/www/index.html
+++ b/www/index.html
@@ -3,13 +3,17 @@
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="stylesheet" href="bundle.css">
   <link rel="import" href="modules/start-page.html">
+  <link rel="import" href="modules/editor-page.html">
+
   <style>
     html { font-family: sans-serif; }
   </style>
 </head>
 <body>
+  <script src="bundle.js"></script>
   <div id="main"></div>
 
   <start-page></start-page>
-  <script src="bundle.js"></script>
+  <br>
+  <editor-page></editor-page>
 </body>
